- Updated - core/read-more default styles
- Updated - core/group marquee styles default attributes
- Updated - default Hero with background pattern (removed unnecessary group block)
- Updated - prefixed DOM functions with dom_ and created aliases for them
- Updated - style deps enqueue method for some of the blocks that might require other block styles (Calendar, FAQ, Pagination, etc)
- Added - dark pricing box pattern variation
- Added - dom_image_2_svg to import SVG images into DOMDocument class
- Added - buttons shadow on hover

v6.2.6
- Updated - Hide some patterns from inserter (post meta, author box, post entry template)
- Fixed - issue with HTML pattern registration when trying to hide a pattern from inserter

v6.2.5
- Updated - core/search dequeue default JavaScript view handle (not necessary, we use modal and we load only on demand)
- Removed - core/post-featured-image old aspect ratio approach (aspect-ratio css property has good support now)
- Removed - unnecessary wp_enqueue_scripts action from some blocks
- Fixed - core/social-links default social services colors
- Added - core/post-featured-image support for overlay
- Added - encode_svg_data function to convert svg to data url

v6.2.4
- Fixed - wrong $this context usage in blocks/class-image.php

v6.2.3
- Updated - use static function for some inline styles
- Added - core/gallery gap support
- Added - core/post-template grid support

v6.2.2
- Removed - drop support class for Captcha4WP

v6.2.1
- Updated - Navigation gap inherit styled moved to default for when offcanvas is not enabled
- Updated - Dynamic CSS generation to use namespace in file name to avoid conflicts (wp-block-{name} / wc-blocks-style-{name} for WooCommerce, and so on)
- Updated - core/post-template grid layout support for WP 6.3
- Updated - core/button variation styles moved inline (fixed in WP 6.3 for FSE)
- Updated - core/loginout to support login modal / also allow the block into core/navigation