@@ -198,6 +198,10 @@
 			"contentSize": "1320px",
 			"wideSize": "1440px"
 		},
+		"lightbox": {
+			"enabled": true,
+			"allowEditing": true
+		},
 		"shadow": {
 			"presets": [
 				{
@@ -334,8 +338,12 @@
 				"css": "overflow:hidden;"
 			},
 			"core/button": {
-				"border": {
-					"width": "1px"
+				"variations": {
+					"outline": {
+						"border": {
+							"width": "1px"
+						}
+					}
 				}
 			},
 			"core/code": {
